# piko

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  pyrightconfig.tests.json
.github/workflows/: quality.yml
docs/: workflow-control-plane.md
examples/: simple_worker.py
migrations/: env.py
migrations/versions/: 0002_job_lock_lease.py  0003_job_run_attempt.py  0004_date_job_completion.py  __init__.py
piko/: __init__.py  app.py
piko/cli/: __init__.py  main.py  migrate.py  schema.py
piko/compute/: manager.py
piko/config/: __init__.py  defaults.toml
piko/core/: cache.py  discovery.py  registry.py  resource.py  runner.py  scheduler.py  types.py  watcher.py
piko/infra/: db.py  leader.py  logging.py  observability.py  schema.py
piko/migrations/: __init__.py  alembic.ini  env.py  script.py.mako
piko/migrations/versions/: 0001_initial.py  0005_remove_sink_dedupe.py  0006_workflow_control_plane.py  schema_v1.py
piko/persistence/: intent.py  sink_base.py  writer.py
piko/workflow/: __init__.py  lifecycle.py  mysql_repository.py  observability.py  repository.py  state_machine.py  types.py  worker.py
scripts/: migrate.py  publish.py  run-workflow-contract-mutations.py
tests/: conftest.py  test_app_instances.py  test_cache.py  test_cli.py  test_compute.py  test_config_sources.py  test_db.py  test_health.py  test_leader.py  test_logging.py  test_persistence.py  test_registry.py  test_resource.py  test_runner.py  test_watcher.py  test_watcher_behavior.py  test_workflow_app_lifecycle.py
tests/workflow/: conftest.py
tests/workflow/chaos/: test_crash_after_claim.py  test_crash_before_finalize.py  test_heartbeat_loss.py  test_shutdown_with_orphan_handler.py
tests/workflow/contracts/: test_claim_and_concurrency.py  test_dag_activation.py  test_fencing.py  test_finalization_transaction.py  test_idempotency.py  test_lease_and_heartbeat.py  test_observability.py  test_registration.py  test_retry_and_timeout.py  test_shutdown_recovery.py  test_state_machine.py  test_worker_finalization.py
tests/workflow/integration/: conftest.py  test_dual_backend_contract.py  test_dual_backend_extended_contract.py  test_mysql_concurrency.py  test_mysql_concurrency_extended.py  test_mysql_recovery.py  test_mysql_transaction_failures.py  test_mysql_workflow_lifecycle.py  test_piko_app_mysql_lifecycle.py  test_schema_migrations.py  test_schema_reconciliation.py
typings/: cloudpickle.pyi
typings/apscheduler/: job.pyi
typings/apscheduler/executors/: asyncio.pyi
typings/apscheduler/jobstores/: memory.pyi
typings/apscheduler/schedulers/: asyncio.pyi
typings/apscheduler/triggers/: cron.pyi  date.pyi  interval.pyi
typings/dynaconf/: __init__.pyi
