[project]
name = "piko-cucc"
version = "0.1.1"
description = "Data-Oriented Async Task Orchestrator"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "chenjp", email = "chenjp105@x.com" }
]
keywords = ["asyncio", "scheduler", "etl", "pipeline", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiofiles>=25.1.0",
    "apscheduler>=3.11.2",
    "asyncmy>=0.2.10",
    "cloudpickle>=3.1.2",
    "croniter>=6.0.0",
    "cryptography>=46.0.3",
    "dynaconf>=3.2.12",
    "fastapi>=0.128.0",
    "greenlet>=3.0.0",
    "prometheus-client>=0.23.1",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.45",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/yingsf/piko"
Repository = "https://github.com/yingsf/piko"
Documentation = "https://github.com/yingsf/piko/tree/dev#readme"

# --- 构建系统配置 ---
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 源码包位置
[tool.hatch.build.targets.wheel]
packages = ["piko"]

# --- 工具配置 ---
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]