[project]
name = "piko-cucc"
version = "0.1.11"
description = "Data-Oriented Async Task Orchestrator"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "chenjp", email = "chenjp105@x.com" }
]
keywords = ["asyncio", "scheduler", "etl", "pipeline", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiofiles>=25.1.0,<26",
    "alembic>=1.18.5,<2",
    "apscheduler>=3.11.3,<4",
    "aiomysql>=0.3.2,<0.4",
    "cloudpickle>=3.1.2,<4",
    "croniter>=6.2.4,<7",
    "dynaconf>=3.3.2,<4",
    "fastapi>=0.139.2,<1",
    "greenlet>=3.5.3,<4",
    "prometheus-client>=0.25.0,<1",
    "pydantic>=2.13.4,<3",
    "sqlalchemy>=2.0.51,<2.1",
    "structlog>=26.1.0,<27",
    "uvicorn>=0.51.0,<1",
]

[project.urls]
Homepage = "https://github.com/yingsf/piko"
Repository = "https://github.com/yingsf/piko"
Documentation = "https://github.com/yingsf/piko/tree/dev#readme"

# 命令行入口：安装后提供 `piko db upgrade` 等数据库迁移命令
[project.scripts]
piko = "piko.cli.main:main"

# --- 构建系统配置 ---
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 源码包位置
[tool.hatch.build.targets.wheel]
packages = ["piko"]
# alembic.ini 与 revision 模板不是 .py 文件，需显式纳入 wheel，
# 否则安装后 `piko db upgrade` 无法定位迁移配置。
force-include = { "piko/migrations/alembic.ini" = "piko/migrations/alembic.ini", "piko/migrations/script.py.mako" = "piko/migrations/script.py.mako" }

[tool.hatch.build.targets.sdist]
include = ["piko", "README.md", "LICENSE", "pyproject.toml"]

# --- 工具配置 ---
[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "bandit>=1.9.4,<2",
    "build>=1.5.0,<2",
    "pip-audit>=2.10.1,<3",
    "pyright>=1.1.411,<2",
    "pytest>=9.1.1,<10",
    "pytest-asyncio>=1.4.0,<2",
    "ruff>=0.15.22,<0.16",
    "twine>=6.2.0,<7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = ["integration: 需要显式隔离 MySQL 测试库的集成测试"]
